<resources>
    <string name="app_name">baidk1</string>
    <string name="text_header">Đặt vé Online</string>
    <string name="text_footer">Giờ tàu | Quy định | Khuyến mãi | Hướng dẫn</string>
    <string name="name_company">Tổng công ty đường sắt Việt Nam</string>
    <string name="text_address">Số 118 Lê Duẩn, Hoàn Kiếm, Hà Nội.\n
        \nGiấy chứng nhận ĐKKD số 113642 theo QĐ thành lập số 973/QĐ-TTg ngày 25/06/2010 của Thủ tướng Chính phủ.\n
        \nMã số doanh nghiệp: 0100105052, đăng ký lần đầu ngày 26/07/2010, đăng ký thay đổi lần 4 ngày 27/06/2014 tại Sở KHĐT Thành phố Hà Nội.\n
        \nTổng đài hỗ trợ khách hàng\nĐiện thoại: <b>19006469</b>\n
        \nEmail: <i>support1@dsvn.vn</i>\n\t\t\t\t\t  <i>support2@dsvn.vn</i>\n
    </string>
    <string name="text_booking">Đặt vé tàu</string>
    <string name="text_name">Họ và tên</string>
    <string name="text_phone">Số điện thoại</string>
    <string name="text_departure_station">Ga đi</string>
    <string name="text_arrival_station">Ga đến</string>
</resources>