<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="BookingActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/text_booking"
                android:textColor="@color/colorOrange"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:background="@drawable/text_border"
                android:hint="@string/text_name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#A9A9A9"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:background="@drawable/text_border"
                android:hint="@string/text_phone"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#A9A9A9"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:text="@string/text_departure_station"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_departure_station"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="6dp"
                android:text="@string/text_arrival_station"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_arrival_station"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_spinner" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="2dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="Một chiều"
                    android:textColor="#818181"
                    android:textSize="24sp" />

                <RadioButton
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:minHeight="48dp"
                    android:text="Khứ hồi"
                    android:textColor="#818181"
                    android:textSize="24sp" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="8dp"
                    android:text="Ngày đi:"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/text_departure_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/text_border"
                    android:focusableInTouchMode="false"
                    android:hint="yyyy/mm/dd"
                    android:inputType="none"
                    android:onClick="openDepartureDatePickerDialog"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A9A9"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="8dp"
                    android:text="Ngày về:"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/text_return_date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/text_border"
                    android:focusableInTouchMode="false"
                    android:hint="yyyy/mm/dd"
                    android:inputType="none"
                    android:onClick="openReturnPickerDialog"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A9A9"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="8dp"
                    android:text="Người lớn"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/text_border"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A9A9"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="8dp"
                    android:text="Trẻ em"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/text_border"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="#A9A9A9"
                    android:textSize="24sp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnBookingTicket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button"
                android:text="Đặt vé"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>